[package]
name = "rusher"
version = "0.1.0"
authors = ["MGC <chagel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.9"
reqwest = { version = "0.10.6", features = ["blocking", "json"] }
serde = { version = "1.0.111", features = ["derive"]}
serde_json = "1.0.54"
eval = "0.4.3"
